Fix grid on mobile

--- a/src/client-app/components/center/center.module.scss
+++ b/src/client-app/components/center/center.module.scss
@@ -5,8 +5,7 @@
   height: 100%;
   
   @media only screen and (max-width: 768px) {
-    //justify-content: flex-start;
-    //padding: 40% .4em 0;
+    grid-template-rows: 15% [center] 1fr auto;
   }
 }
 
